# am4cm

./: .gitignore  LICENSE  README.md  pyproject.toml
evals/: TEST_best_model_ltae_classification_report.txt
scripts/: train_ltae.py
src/data/: dataset.py
src/models/: ltae.py
src/training/: utils.py
tests/: test_eval.py  test_ltae.py  test_sits_dataset.py
